--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Andre-Bot",
-  "version": "3.5",
+  "name": "Andre-Noah",
+  "version": "3.5.0",
   "description": "Dono: Andre Noah",
   "main": "index.js",
   "directories": {
